prometheus-operator/ingress/ingressroute-alertmanager.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-alertmanager-ingress
