prometheus-operator/ingress/ingressroute-grafana.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-grafana
  annotations:
    argocd.argoproj.io/hook: Skip
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-grafana-ingress
