prometheus-operator/ingress/ingressroute-prometheus.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https-prometheus
  annotations:
    argocd.argoproj.io/hook: Skip
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-tls
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-prometheus-ingress
